JCodeGen  - generated code is independent on H2O.jar  - generated code contains data  - generated code contains main function scoring the data and showing    timing.